GET - Inheritance support #584
* AgEntity must be aware of inheritance
* IncludeMerger must be aware of inheritance